name:                battlelogs
version:             0.1.0.0
synopsis:            A minimal personal journal system.
homepage:            https://github.com/yamadapc/battlelogs
license:             GPL-2
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

executable battlelogs
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , time >=1.4 && <1.5
                     , old-locale >= 1
                     , directory >=1.2 && <1.3
                     , process >=1.2 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
